# educational-ai-system

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  verify_rag.py
ai-services/: .env.example  README.md  demo_batch_questions.py  demo_question_output.py  question_output_sample.json  requirements.txt  test_question_generator_standalone.py  test_results.json
ai-services/data/sample_textbooks/: math_unit1.txt  science_unit1.txt
ai-services/data/vector_db/f50cd4c7-a362-4d1c-9317-3e8b2e08f168/: index_metadata.pickle
ai-services/scripts/: setup_environment.py  test_pipeline.py
ai-services/src/: main.py
ai-services/src/evaluation/: quality_assessor.py
ai-services/src/models/: llm_client.py  question_generator.py
ai-services/src/rag/: document_processor.py  embeddings.py  re_ranker.py  retriever.py  vector_store.py
ai-services/src/utils/: config.py  logger.py  prompts.py
ai-services/tests/: test_document_processor.py  test_integration.py  test_question_generator.py  test_vector_store.py
backend/: main.py
rag-question-generator/: .env.example  README.md  requirements.txt  setup.py
rag-question-generator/examples/: sample_document.txt  sample_output.json
rag-question-generator/src/: config.py  document_loader.py  main.py  question_generator.py  rag_processor.py
rag-question-generator/tests/: test_integration.py
