[project]
name = "educational-ai-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "black>=23.0.0",
    "chromadb>=0.4.18",
    "click>=8.1.0",
    "flake8>=6.0.0",
    "httpx>=0.24.0",
    "isort>=5.12.0",
    "langchain>=0.1.0",
    "mypy>=1.0.0",
    "numpy>=1.24.0",
    "openai>=1.3.0",
    "pandas>=2.0.0",
    "pathlib2>=2.3.7 ; python_full_version < '3.4'",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    "python-dotenv>=1.0.0",
    "structlog>=23.0.0",
    "tenacity>=8.2.0",
    "tiktoken>=0.5.0",
    "typing-extensions>=4.0.0",
]
